<resources>
    <string name="app_name">HiCariba Version 0.1</string>
    <string name="FirstName">First Name</string>
    <string name="textFieldEmail">Email</string>
    <string name="textFieldPhone">Phone Number (+ country code)</string>
    <string name="textFieldLastName">Last Name</string>
    <string name="verifyinfowarning">We will send an email to verify your email address \nWe will send an SMS message to verify your phone number
    </string>
    <string name="title_activity_login">HiCariba Version 0.1 LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_exit">Cancel</string>
</resources>