<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginScreenConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/mainBackgroundColor"
    android:onClick="removeFocuse"
    tools:context=".ui.signup.SignUpScreen">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFirstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FirstName"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldLastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textFieldLastName"
                android:padding="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textFieldPhone"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textFieldEmail"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/submit_button_background"
                android:text="Submit"
                android:textColor="#fff"
                app:shapeAppearance="?attr/shapeAppearanceMediumComponent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/verifyinfowarning"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/SignUpScreenIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@color/mainBackgroundColor"
                android:padding="10dp"
                android:text="Sign Up"
                android:textColor="#fff" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/loginScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="18dp"
            android:text="Log In" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>